# fake-new-detection

./: .gitignore  CHROME_EXTENSION_README.md  ENHANCED_DECOMPOSITION_SOLUTION.md  ENHANCED_VIDEO_PROCESSING.md  GEMINI_README.md  LOGO_METRICS_UPDATE.md  MULTIMODAL_README.md  Procfile  README.md  RENDER_DEPLOYMENT.md  SCREEN_CAPTURE_FEATURE.md  UI_CHANGES_SUMMARY.md  UI_FIXES_SUMMARY.md  api_config_production.yaml  build.sh  demo_enhanced_results.py  extension_backend.py  extension_debug_test.html  extension_requirements.txt  gcs_setup_guide.py  pyproject.toml  render_app.py  requirements.txt  setup.py  test_claim_extraction.py  test_enhanced_claim_decomposition.py  test_enhanced_frame_extraction.py  test_enhanced_video_processing.py  test_error_fixes.py  test_full_pipeline_integration.py  test_gcs_config.py  test_json_parsing.py  test_logo_metrics.py  test_screen_capture.html  test_screenshot.py  test_ui_changes.py  test_ui_fixes.py  test_web_integration.py  webapp.py
chrome-extension/: QUICK_INSTALL.md  background.js  content.css  content.js  factcheck-modal.html  options.css  options.html  options.js  popup.css  popup.html  popup.js  screen-capture.js
factcheck/: __init__.py  __main__.py
factcheck/config/: sample_prompt.yaml
factcheck/core/: Decompose.py
factcheck/utils/: api_config.py  multimodal.py  multimodal_gemini.py
factcheck/utils/llmclient/: __init__.py  gemini_client.py
factcheck/utils/prompt/: chatgpt_prompt.py  claude_prompt.py
templates/: LibrAI_fc.html  input.html  input_new.html  main_layout.html  results_new.html
