[tool.poetry]
name = "openfactverification"
version = "0.1.0"
packages = [
    {include = "factcheck"}
]
description = "Fake News Detection: An Open-source Tool for Fact Verification"
authors = [
    "Himanshu Deshmukh <himanshu.deshmukh@gmail.com>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/himanshusdeshmukh2106/fake-new-detection/"

[tool.poetry.dependencies]
python = "^3.9"
anthropic = "^0.23.1"
backoff = "^2.2.1"
bs4 = "^0.0.2"
Flask = { version = "^3.0.3", optional = true }
httpx = "^0.27.0"
nltk = "^3.8.1"
openai = "^1.16.2"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"
playwright = "^1.42.0"
playwright-stealth = "^1.0.6"
tiktoken = "^0.6.0"

[tool.poetry.extras]
api = ["Flask"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
